--- a/tram1/public/css/main/video_component/video.css
+++ b/tram1/public/css/main/video_component/video.css
@@ -28,11 +28,20 @@
 }
 
 .videos_play_button{
-    width: 3%;
+    width: 4%;
     height: 7%;
     position: absolute;
     cursor: pointer;
+    border: none;
+    background-color: none;
+    background: none;
 }
+
+.videos_play_button1{
+    width: 100%;
+    height: 100%;
+}
+
 
 
 .video_span_cover{
